force-app/main/default/objects/Billings__c/Billings__c.object-meta.xml
<CustomObject>
    <description>Order information from Abacus. Each record represents an order position.</description>
    <label>Order</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>