force-app/main/default/objects/Billings__c/fields/a4a_Account_To_Consolidate__c.field-meta.xml
<CustomField>
    <fullName>a4a_Account_To_Consolidate__c</fullName>
    <description>Overrides the Standard Order Project Owner - used in the App4Forecast</description>
    <label>a4a Account To Consolidate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>