force-app/main/default/objects/Billings__c/fields/a4a_Country__c.field-meta.xml
<CustomField>
    <fullName>a4a_Country__c</fullName>
    <formula>BLANKVALUE(a4a_Country_To_Consolidate__c ,BLANKVALUE(UPPER(Project_Owner_Account__r.BillingCountry),&quot;Other&quot;))

/* previous version until 22.4.2021
BLANKVALUE(UPPER(Project_Owner_Account__r.BillingCountry),&quot;Other&quot;)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Country</label>
    <type>Text</type>
</CustomField>