force-app/main/default/objects/Billings__c/fields/a4a_DataSourceId__c.field-meta.xml
<CustomField>
    <fullName>a4a_DataSourceId__c</fullName>
    <description>used for debugging</description>
    <formula>&quot;GC-&quot;&amp;CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a DataSourceId</label>
    <type>Text</type>
</CustomField>