force-app/main/default/objects/Billings__c/fields/a4a_Date__c.field-meta.xml
<CustomField>
    <fullName>a4a_Date__c</fullName>
    <formula>IF(Order_Status__c &lt;&gt; &quot;Position Replaced&quot;,
BLANKVALUE(Invoice_Date__c,Delivery_Date__c),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Date</label>
    <type>Date</type>
</CustomField>