force-app/main/default/objects/Billings__c/fields/a4a_Last_Modified_DateTime__c.field-meta.xml
<CustomField>
    <fullName>a4a_Last_Modified_DateTime__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Last Modified DateTime</label>
    <type>DateTime</type>
</CustomField>