force-app/main/default/objects/Billings__c/fields/a4a_Manual_Forecast__c.field-meta.xml
<CustomField>
    <fullName>a4a_Manual_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>a4a Manual Forecast</label>
    <type>Checkbox</type>
</CustomField>