force-app/main/default/objects/Billings__c/fields/a4a_Measure_Filter__c.field-meta.xml
<CustomField>
    <fullName>a4a_Measure_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>a4a Measure Filter</label>
    <type>Checkbox</type>
</CustomField>