force-app/main/default/objects/Billings__c/fields/a4a_Measure_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>a4a_Measure_Report_Name__c</fullName>
    <formula>LEFT(UPPER(Project_Owner_Account__r.BillingCountry)  &amp; &quot; - &quot; &amp; Product__r.ProductCode &amp; 
IF(LEN(Project_Owner_Account__c) &gt; 0,&quot; - &quot; &amp; Project_Owner_Account__r.SF_Account_Number__c,&quot;&quot;) 
,40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Measure Report Name</label>
    <type>Text</type>
</CustomField>