force-app/main/default/objects/Billings__c/fields/a4a_needs_Update__c.field-meta.xml
<CustomField>
    <fullName>a4a_needs_Update__c</fullName>
    <formula>a4a_Measure_Filter__c &lt;&gt;  a4a_Measure_Filter_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a needs Update</label>
    <type>Checkbox</type>
</CustomField>