force-app/main/default/objects/Billings__c/fields/a4a_Price_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>a4a_Price_per_Unit__c</fullName>
    <formula>IF(

Price_CHF__c&gt;0, 

Price_CHF__c, 

Price_per_unit__c * 

CASE(CurrencyIsoCode,
&quot;EUR&quot;, $Setup.Constant_Exchange_Rates__c.EUR2CHF__c ,
&quot;JPY&quot;, $Setup.Constant_Exchange_Rates__c.JPY2CHF__c ,
&quot;USD&quot;, $Setup.Constant_Exchange_Rates__c.USD2CHF__c ,
1
)
)

/* previous version until 22.5.2022

Price_per_unit__c * $Setup.Constant_Exchange_Rates__c.USD2CHF__c

*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Price per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>