force-app/main/default/objects/Billings__c/fields/a4a_Product__c.field-meta.xml
<CustomField>
    <fullName>a4a_Product__c</fullName>
    <formula>BLANKVALUE(Product__r.ProductCode,&quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Product</label>
    <type>Text</type>
</CustomField>