force-app/main/default/objects/Billings__c/fields/a4a_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>a4a_Product_Category__c</fullName>
    <formula>Product__r.a4x_Product_Category__c


/* previous Version until 14.6.2021

BLANKVALUE(TEXT(Product__r.Reporting_Category__c),&quot;Other&quot;)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Product Category</label>
    <type>Text</type>
</CustomField>