force-app/main/default/objects/Billings__c/fields/a4a_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>a4a_Product_Code__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Product Code</label>
    <type>Text</type>
</CustomField>