force-app/main/default/objects/Billings__c/fields/a4a_Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>a4a_Project_Owner__c</fullName>
    <formula>BLANKVALUE( a4a_Account_To_Consolidate__c , Project_Owner_Account__r.SF_Account_Number__c) 


/* previous version until 28/01/2021
Project_Owner_Account__r.SF_Account_Number__c
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Project Owner</label>
    <type>Text</type>
</CustomField>