force-app/main/default/objects/Billings__c/fields/a4a_Project_Owner_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>a4a_Project_Owner_Channel_Manager__c</fullName>
    <formula>BLANKVALUE(Project_Owner_Channel_Manager__c ,&quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Project Owner Channel Manager</label>
    <type>Text</type>
</CustomField>