force-app/main/default/objects/Billings__c/fields/a4a_PYQTD_Value__c.field-meta.xml
<CustomField>
    <fullName>a4a_PYQTD_Value__c</fullName>
    <formula>IF( a4a_QTD_Period__c = &quot;PYQTD&quot; 
, 
1
, 
0
)
* 
Total_Value_CHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a PYQTD Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>