force-app/main/default/objects/Billings__c/fields/a4a_QTD_Comparison__c.field-meta.xml
<CustomField>
    <fullName>a4a_QTD_Comparison__c</fullName>
    <formula>IF( a4a_QTD_Period__c = &quot;PYQTD&quot;
,
-1
,
1
)
*
Total_Value_CHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a QTD Comparison</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>