force-app/main/default/objects/Billings__c/fields/a4a_QTD_Period__c.field-meta.xml
<CustomField>
    <fullName>a4a_QTD_Period__c</fullName>
    <formula>IF( 
YEAR(Invoice_Date__c) = YEAR(TODAY()-1) 
&amp;&amp; 
CEILING(MONTH(Invoice_Date__c+1)/3) = CEILING(MONTH(TODAY()-1)/3) 
&amp;&amp; 
(
DAY(Invoice_Date__c) &lt;= DAY(TODAY()-1)  || MONTH(Invoice_Date__c) &lt; MONTH(TODAY()-1)
)
, 
&quot;QTD&quot;, 
IF( 
YEAR(Invoice_Date__c) = YEAR(TODAY()-1)-1 
&amp;&amp; 
CEILING(MONTH(Invoice_Date__c+1)/3) = CEILING(MONTH(TODAY()-1)/3) 
&amp;&amp; 
MONTH(Invoice_Date__c) &lt;= MONTH(TODAY()-1) 
&amp;&amp;
(
DAY(Invoice_Date__c) &lt;= DAY(TODAY()-1)  || MONTH(Invoice_Date__c) &lt; MONTH(TODAY()-1)
) 
, 
&quot;PYQTD&quot; 
, 
NULL 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a QTD Period</label>
    <type>Text</type>
</CustomField>