force-app/main/default/objects/Billings__c/fields/a4a_Quantity__c.field-meta.xml
<CustomField>
    <fullName>a4a_Quantity__c</fullName>
    <formula>IF(Qty_Invoiced__c=0,Qty_Ordered__c,Qty_Invoiced__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>