force-app/main/default/objects/Billings__c/fields/a4a_Region__c.field-meta.xml
<CustomField>
    <fullName>a4a_Region__c</fullName>
    <formula>BLANKVALUE( a4a_Region_To_Consolidate__c ,BLANKVALUE(TEXT(Project_Owner_Account__r.uB_Office__c),&quot;Other&quot;))

/* previous version until 22.5.2021
BLANKVALUE(TEXT(Project_Owner_Account__r.uB_Office__c),&quot;Other&quot;)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Region</label>
    <type>Text</type>
</CustomField>