force-app/main/default/objects/Billings__c/fields/a4a_Region_To_Consolidate__c.field-meta.xml
<CustomField>
    <fullName>a4a_Region_To_Consolidate__c</fullName>
    <label>a4a Region To Consolidate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>