force-app/main/default/objects/Billings__c/fields/a4a_Week__c.field-meta.xml
<CustomField>
    <fullName>a4a_Week__c</fullName>
    <formula>CEILING(((Invoice_Date__c - DATE(YEAR(Invoice_Date__c), 1, 1) + 1) +
MOD(DATE(YEAR(Invoice_Date__c), 1, 1) - DATE(1900, 1, 7), 7)) / 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>