force-app/main/default/objects/Billings__c/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <description>Visiting Country (BillingCountry)</description>
    <formula>Account__r.BillingCountry</formula>
    <inlineHelpText>Visiting Country (BillingCountry)</inlineHelpText>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>