force-app/main/default/objects/Billings__c/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <formula>IF(Contains(&quot;AR:BR:CA:CL:CO:EC:GT:MX:PA:PE:PR:SV:US:UY:VE&quot;,  Account__r.ShippingCountry ),&quot;AMERICAS&quot;,
IF(Contains(&quot;AE:AM:AT:BA:BE:BG:BY:CH:CY:CZ:DE:DK:EE:EG:ES:FI:FR:GB:GE:GR:HR:HU:IE:IQ:IL:IS:IT:JO:KE:KZ:LB:LI:LT:LU:LV:MA:MD:MT:NG:NL:NO:PL:PT:RO:RS:RU:SE:SA:SI:SK:SM:TJ:TR:UA:UK:ZA&quot;, Account__r.ShippingCountry ),&quot;EMEA&quot;,
IF(Contains(&quot;AU:CN:HK:ID:IN:JP:KR:MY:NZ:PH:PK:SG:TH:VN:TW&quot;,Account__r.ShippingCountry ),&quot;APAC&quot;,
&quot;Corporate&quot;)
))</formula>
    <inlineHelpText>Region derived from the Abacus Address (country)</inlineHelpText>
    <label>Account Region</label>
    <type>Text</type>
</CustomField>