force-app/main/default/objects/Billings__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <description>2014.11.20 khir changed from End Customer Account to Project Owner Account
ORIG (until 2014.11.20) below:
if(not(isnull( End_Customer_Account__c )), text( End_Customer_Account__r.Application_Type__c ),  if( ispickval(Account__r.Market__c, &quot;not applicable&quot;), &quot;not applicable&quot;, text(Account__r.Application_Type__c )))</description>
    <formula>if(not(isblank(Project_Owner_Account__c)),text(Project_Owner_Account__r.Application_Type__c),if(not(isblank(End_Customer_Account__c)),text(End_Customer_Account__r.Application_Type__c),text(Account__r.Application_Type__c )))</formula>
    <inlineHelpText>from Project Owner Account, or, if not available, from End Customer Account</inlineHelpText>
    <label>Old Application Type</label>
    <type>Text</type>
</CustomField>