force-app/main/default/objects/Billings__c/fields/AWB_Number__c.field-meta.xml
<CustomField>
    <fullName>AWB_Number__c</fullName>
    <description>&quot;Air Waybill Number” field from Abacus. We fill that field with a tracking number for orders in abacus during the billing process</description>
    <inlineHelpText>(From Abacus) Air Waybill Number.</inlineHelpText>
    <label>AWB Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>