force-app/main/default/objects/Billings__c/fields/Blocked_Price__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Synced field with Abacus field Blocked_Price.</description>
    <inlineHelpText>(From Abacus) Price is blocked for the value as it was entered to the ERP system. Customer needs to accept a new price before the shipment.</inlineHelpText>
    <label>Blocked-Price</label>
    <type>Checkbox</type>
</CustomField>