force-app/main/default/objects/Billings__c/fields/Calculate_Contribution_Split__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Contribution_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checkbox is set, (re-)calculate the split of the contribution to uB Offices</inlineHelpText>
    <label>Calculate Contribution Split</label>
    <type>Checkbox</type>
</CustomField>