force-app/main/default/objects/Billings__c/fields/Calculate_Total_COGS_CHF__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Total_COGS_CHF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set the flag to (re-)calculate the COGS and split of the contribution.</inlineHelpText>
    <label>Calculate Total COGS CHF</label>
    <type>Checkbox</type>
</CustomField>