force-app/main/default/objects/Billings__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>A - Exception
B - Allocation
C - Existing supply contracts
D - Standard PO/OC
E - Addition to exception orders
S - Special Supply/Build</description>
    <inlineHelpText>(From Abacus)
A - Exception,
B - Allocation,
C - Existing supply contracts,
D - Standard PO/OC,
E - Consignment
S - Special Supply/Build</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>A - Exception</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>B - Allocation</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C - Existing supply contracts</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>D - Standard PO/OC</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>E - Consignment</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>S - Special Supply/Build</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>