force-app/main/default/objects/Billings__c/fields/CDR__c.field-meta.xml
<CustomField>
    <fullName>CDR__c</fullName>
    <description>Confirm Delivery Performance</description>
    <formula>if( ISBLANK(Confirm_Date__c), 1, 
if ( Delivery_Date__c &lt;=  Confirm_Date__c ,1,0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Confirm Delivery Performance. 1 if delivery date &lt;= confirm date, else 0</inlineHelpText>
    <label>CDR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>