force-app/main/default/objects/Billings__c/fields/CDR_CHF__c.field-meta.xml
<CustomField>
    <fullName>CDR_CHF__c</fullName>
    <description>Is equal to CDR * Total Value CHF.</description>
    <formula>CDR__c  *  Total_Value_CHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Weighted Confirm Delivery Reliability
=&gt; if delivery happened no later than date confirmed, the field is equal to Total Value CHF. Else it is zero.</inlineHelpText>
    <label>CDR CHF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>