force-app/main/default/objects/Billings__c/fields/CDR_delay__c.field-meta.xml
<CustomField>
    <fullName>CDR_delay__c</fullName>
    <description>Delivery delay in days when the confirmed delivery date can not be met</description>
    <formula>if (Delivery_Date__c  -  Confirm_Date__c &lt; 0, 0, Delivery_Date__c  -  Confirm_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Delivery delay in days when the confirmed delivery date can not be met</inlineHelpText>
    <label>CDR delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>