force-app/main/default/objects/Billings__c/fields/CDR_delay_only_ubx__c.field-meta.xml
<CustomField>
    <fullName>CDR_delay_only_ubx__c</fullName>
    <description>If the reason for a delay is not equal to &quot;financial&quot; or &quot;customer request&quot;, the value is =CDR delay, else &quot;0&quot;</description>
    <formula>IF(OR(CONTAINS (Confirm_Date_Not_Met__c, &quot;Financial&quot;), CONTAINS (Confirm_Date_Not_Met__c, &quot;request&quot;)), 0, CDR_delay__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the reason for a delay is not equal to &quot;financial&quot; or &quot;customer request&quot;, the value is = CDR delay, else &quot;0&quot;</inlineHelpText>
    <label>CDR delay only ubx</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>