force-app/main/default/objects/Billings__c/fields/Chinese_Domestic_Market__c.field-meta.xml
<CustomField>
    <fullName>Chinese_Domestic_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(From Abacus) Order served from China</description>
    <inlineHelpText>(From Abacus) Order served from China</inlineHelpText>
    <label>Chinese Domestic Market</label>
    <type>Checkbox</type>
</CustomField>