force-app/main/default/objects/Billings__c/fields/CM_Pct__c.field-meta.xml
<CustomField>
    <fullName>CM_Pct__c</fullName>
    <formula>if ( Total_Value_CHF__c &gt; 0, Total_Contribution_CHF__c / Total_Value_CHF__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contribution margin of this order in percent.</inlineHelpText>
    <label>CM [%]</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>