force-app/main/default/objects/Billings__c/fields/Confirm_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Date__c</fullName>
    <description>First confirmation date</description>
    <inlineHelpText>(From Abacus) First confirmation date</inlineHelpText>
    <label>Confirm Date</label>
    <type>Date</type>
</CustomField>