force-app/main/default/objects/Billings__c/fields/Confirm_Date_Not_Met__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Date_Not_Met__c</fullName>
    <inlineHelpText>(From Abacus) Reason why u-blox could not meet the confirmed date of delivery.</inlineHelpText>
    <label>Confirm Date Not Met</label>
    <length>40</length>
    <type>Text</type>
</CustomField>