force-app/main/default/objects/Billings__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Contact person who has placed the order</description>
    <inlineHelpText>(From Abacus) Contact person who has placed the order</inlineHelpText>
    <label>Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>