force-app/main/default/objects/Billings__c/fields/Contribution_Japan__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Japan__c</fullName>
    <inlineHelpText>Contribution that is assigned to Japan. Stored when order is closed.</inlineHelpText>
    <label>Contribution Japan CHF</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>