force-app/main/default/objects/Billings__c/fields/Contribution_Korea_CHF__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Korea_CHF__c</fullName>
    <inlineHelpText>Contribution that is assigned to Korea. Stored when order is closed.</inlineHelpText>
    <label>Contribution Korea CHF</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>