force-app/main/default/objects/Billings__c/fields/Contribution_RoA_CHF__c.field-meta.xml
<CustomField>
    <fullName>Contribution_RoA_CHF__c</fullName>
    <inlineHelpText>Contribution that is assigned to Rest of APAC. Stored when order is closed.</inlineHelpText>
    <label>Contribution RoA CHF</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>