force-app/main/default/objects/Billings__c/fields/Contribution_Share__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Share__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contribution share that defines the split of the contribution for this order</inlineHelpText>
    <label>Contribution Share</label>
    <referenceTo>Contribution_Share__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>