force-app/main/default/objects/Billings__c/fields/Cost_CHF_Abacus__c.field-meta.xml
<CustomField>
    <fullName>Cost_CHF_Abacus__c</fullName>
    <inlineHelpText>(From Abacus) Cost in CHF</inlineHelpText>
    <label>Cost CHF Abacus</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>