force-app/main/default/objects/Billings__c/fields/CPO_missing__c.field-meta.xml
<CustomField>
    <fullName>CPO_missing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Imported from Abacus</description>
    <inlineHelpText>(From Abacus)</inlineHelpText>
    <label>CPO missing</label>
    <type>Checkbox</type>
</CustomField>