force-app/main/default/objects/Billings__c/fields/Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_No__c</fullName>
    <description>ABACUS Customer Number</description>
    <inlineHelpText>(From Abacus) Abacus customer number</inlineHelpText>
    <label>Customer No</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>