force-app/main/default/objects/Billings__c/fields/Customer_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_Number__c</fullName>
    <description>This field will populate from the object Customer_Part_Number__c with the value of its field Customer_Part_Number__c. Whenever a new Customer_Part_Number__c generated in the object Customer_Part_Number__c.</description>
    <label>Customer Part Number String</label>
    <length>30</length>
    <type>Text</type>
</CustomField>