force-app/main/default/objects/Billings__c/fields/Customer_Part_Number_formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_Number_formula__c</fullName>
    <formula>Customer_Part_Number_ID__r.Customer_Part_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Part Number</label>
    <type>Text</type>
</CustomField>