force-app/main/default/objects/Billings__c/fields/Customer_Part_Number_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_Number_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for Customer Part Number record.</description>
    <inlineHelpText>Lookup field for Customer Part Number record.</inlineHelpText>
    <label>Customer Part Number ID</label>
    <referenceTo>Customer_Part_Number__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>