force-app/main/default/objects/Billings__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <inlineHelpText>(From Abacus) Date of delivery. Used to calculate delivery reliability</inlineHelpText>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>