force-app/main/default/objects/Billings__c/fields/Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms__c</fullName>
    <description>(From Abacus)</description>
    <inlineHelpText>(From Abacus)</inlineHelpText>
    <label>Delivery Terms</label>
    <length>50</length>
    <type>Text</type>
</CustomField>