force-app/main/default/objects/Billings__c/fields/Direct_Order__c.field-meta.xml
<CustomField>
    <fullName>Direct_Order__c</fullName>
    <formula>if( or((Account__r.SF_Account_Number__c  =  End_Customer_Account_SF_Number__c),isblank(End_Customer_Account_SF_Number__c)) , &quot;yes&quot;, &quot;no&quot;)</formula>
    <inlineHelpText>&quot;yes&quot; if SF Account No equals to End Customer Acc No. &quot;no&quot; else</inlineHelpText>
    <label>Direct Order</label>
    <type>Text</type>
</CustomField>