force-app/main/default/objects/Billings__c/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <inlineHelpText>(From Abacus) End customer of this order item.</inlineHelpText>
    <label>End Customer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>