force-app/main/default/objects/Billings__c/fields/End_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The end customer is the company buying from the Account that buys from us. Typically this is the customer of our distributor or direct CM.</inlineHelpText>
    <label>End Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (End Customer Account)</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>