force-app/main/default/objects/Billings__c/fields/End_Customer_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Account_ID__c</fullName>
    <description>Field used in &quot;Show Orders&quot; report under Account.</description>
    <formula>End_Customer_Account__r.Id</formula>
    <label>End Customer Account ID</label>
    <type>Text</type>
</CustomField>