force-app/main/default/objects/Billings__c/fields/End_Customer_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Account_Owner__c</fullName>
    <description>Account Owner of End Customer Account</description>
    <formula>End_Customer_Account__r.Owner.FirstName &amp; &quot; &quot; &amp; End_Customer_Account__r.Owner.LastName</formula>
    <inlineHelpText>Account Owner of End Customer Account</inlineHelpText>
    <label>End Customer Account Owner</label>
    <type>Text</type>
</CustomField>