force-app/main/default/objects/Billings__c/fields/End_Customer_Account_SF_Number__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Account_SF_Number__c</fullName>
    <description>Copy of Salesforce Account number that allows filtering of orders (used in Custom Button &quot;Show Orders&quot; on Account level)</description>
    <formula>End_Customer_Account__r.SF_Account_Number__c</formula>
    <label>End Customer Account SF Number</label>
    <type>Text</type>
</CustomField>